--- a/cssSimpleChart.html
+++ b/cssSimpleChart.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="cssSimpleChart.css">
     </head>
     <body>
-        <div class="vtree">
+        <div class="chart">
             <ul>
                 <li class="firstLevel">
                     <div class="grandpa">
