--- a/cssSimpleChart.html
+++ b/cssSimpleChart.html
@@ -15,7 +15,7 @@
                     </div>
                     <ul>
                         <!-- Note : there musn't be any space between li elements, because since they're displayed as inline blocks, there will be a space as between words. See http://stackoverflow.com/questions/5256533/a-space-between-inline-block-list-items -->
-                        <li><div><div class="box">Item 1-1</div></div></li><li><div><div class="box">Item 1-2</div></div></li><li><div><div class="box">Item 1-3</div></div></li>
+                        <li><div><div class="box">Item 1-1</div></div></li><li><div><div class="box">Item 1-2</div></div></li><li><div><div class="box">Item 1-3. This item is super super super super super super super super super super super super long and should be wrapped.</div></div></li>
                     </ul>
                 </li>
             </ul>
